badge-filter-title spacing issue fixed

--- a/front-end/Assets/src/css/modules/_resource-center.scss
+++ b/front-end/Assets/src/css/modules/_resource-center.scss
@@ -124,6 +124,7 @@
     border-radius: 10rem;
     color: #29a5d6;
     border: 1px solid #29a5d6;
+    margin-top: 0;
   }
 
   .reset-btn {
